--- a/internal/translations/locales/fr-CH/out.gotext.json
+++ b/internal/translations/locales/fr-CH/out.gotext.json
@@ -2,18 +2,430 @@
     "language": "fr-CH",
     "messages": [
         {
-            "id": "Hi there!",
-            "message": "Hi there!",
+            "id": "Su",
+            "message": "Su",
+            "translation": ""
+        },
+        {
+            "id": "Mo",
+            "message": "Mo",
+            "translation": ""
+        },
+        {
+            "id": "Tu",
+            "message": "Tu",
+            "translation": ""
+        },
+        {
+            "id": "We",
+            "message": "We",
+            "translation": ""
+        },
+        {
+            "id": "Th",
+            "message": "Th",
+            "translation": ""
+        },
+        {
+            "id": "Fr",
+            "message": "Fr",
+            "translation": ""
+        },
+        {
+            "id": "Sa",
+            "message": "Sa",
+            "translation": ""
+        },
+        {
+            "id": "Continue with Date: {FormatJanuary_2}",
+            "message": "Continue with Date: {FormatJanuary_2}",
+            "translation": "",
+            "placeholders": [
+                {
+                    "id": "FormatJanuary_2",
+                    "string": "%[1]v",
+                    "type": "string",
+                    "underlyingType": "string",
+                    "argNum": 1,
+                    "expr": "selDate.Format(\"January 2\")"
+                }
+            ]
+        },
+        {
+            "id": "Continue with Time: {Format1504}",
+            "message": "Continue with Time: {Format1504}",
+            "translation": "",
+            "placeholders": [
+                {
+                    "id": "Format1504",
+                    "string": "%[1]v",
+                    "type": "string",
+                    "underlyingType": "string",
+                    "argNum": 1,
+                    "expr": "selTime.Format(\"15:04\")"
+                }
+            ]
+        },
+        {
+            "id": "Share these plans in a chat ✅🔜",
+            "message": "Share these plans in a chat ✅🔜",
+            "translation": ""
+        },
+        {
+            "id": "🏆 Edit Name",
+            "message": "🏆 Edit Name",
+            "translation": ""
+        },
+        {
+            "id": "📆 Edit Date",
+            "message": "📆 Edit Date",
+            "translation": ""
+        },
+        {
+            "id": "⏰ Edit Time",
+            "message": "⏰ Edit Time",
+            "translation": ""
+        },
+        {
+            "id": "📍 Edit Location",
+            "message": "📍 Edit Location",
+            "translation": ""
+        },
+        {
+            "id": "🕴 Edit Hosted By",
+            "message": "🕴 Edit Hosted By",
+            "translation": ""
+        },
+        {
+            "id": "📝 Add Notes",
+            "message": "📝 Add Notes",
+            "translation": ""
+        },
+        {
+            "id": "👫 Set Max Attendees",
+            "message": "👫 Set Max Attendees",
+            "translation": ""
+        },
+        {
+            "id": "💔 Allow Maybe: {SprintfYes}",
+            "message": "💔 Allow Maybe: {SprintfYes}",
+            "translation": "",
+            "placeholders": [
+                {
+                    "id": "SprintfYes",
+                    "string": "%[1]v",
+                    "type": "string",
+                    "underlyingType": "string",
+                    "argNum": 1,
+                    "expr": "iif(event.DisableMaybe == 1, loc.Sprintf(\"No\"), loc.Sprintf(\"Yes\"))"
+                }
+            ]
+        },
+        {
+            "id": "No",
+            "message": "No",
+            "translation": ""
+        },
+        {
+            "id": "Yes",
+            "message": "Yes",
+            "translation": ""
+        },
+        {
+            "id": "📩 Allow Sharing: {SprintfNo}",
+            "message": "📩 Allow Sharing: {SprintfNo}",
+            "translation": "",
+            "placeholders": [
+                {
+                    "id": "SprintfNo",
+                    "string": "%[1]v",
+                    "type": "string",
+                    "underlyingType": "string",
+                    "argNum": 1,
+                    "expr": "iif(event.AllowShare == 1, loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
+                }
+            ]
+        },
+        {
+            "id": "⚙ Advanced Options...",
+            "message": "⚙ Advanced Options...",
+            "translation": ""
+        },
+        {
+            "id": "⚙ ADVANCED OPTIONS ⚙",
+            "message": "⚙ ADVANCED OPTIONS ⚙",
+            "translation": ""
+        },
+        {
+            "id": "🐕 Suitwalk: {SprintfNo}",
+            "message": "🐕 Suitwalk: {SprintfNo}",
+            "translation": "",
+            "placeholders": [
+                {
+                    "id": "SprintfNo",
+                    "string": "%[1]v",
+                    "type": "string",
+                    "underlyingType": "string",
+                    "argNum": 1,
+                    "expr": "iif(event.Suitwalk == 1, loc.Sprintf(\"Yes\"), loc.Sprintf(\"No\"))"
+                }
+            ]
+        },
+        {
+            "id": "🔠 Language",
+            "message": "🔠 Language",
+            "translation": ""
+        },
+        {
+            "id": "⌚ Time Zone",
+            "message": "⌚ Time Zone",
+            "translation": ""
+        },
+        {
+            "id": "🔙 Back",
+            "message": "🔙 Back",
+            "translation": ""
+        },
+        {
+            "id": [
+                "CALEN_DATE_CHOOSE_TEXT",
+                "Got it.  Choose a Date for the event by clicking on the Calendar below and then clicking Continue."
+            ],
+            "message": "Got it.  Choose a Date for the event by clicking on the Calendar below and then clicking Continue.",
+            "translation": ""
+        },
+        {
+            "id": "Date selected: {FormatJanuary_2_2006}",
+            "message": "Date selected: {FormatJanuary_2_2006}",
+            "translation": "",
+            "placeholders": [
+                {
+                    "id": "FormatJanuary_2_2006",
+                    "string": "%[1]v",
+                    "type": "string",
+                    "underlyingType": "string",
+                    "argNum": 1,
+                    "expr": "selDate.Format(\"January 2, 2006\")"
+                }
+            ]
+        },
+        {
+            "id": "Could not parse the date you provided. Please send it in the format YYYY-MM-DD.",
+            "message": "Could not parse the date you provided. Please send it in the format YYYY-MM-DD.",
+            "translation": ""
+        },
+        {
+            "id": [
+                "CALEN_TIME_CHOOSE_TEXT",
+                "Got it.  Choose a Time for the event by clicking on the times below and then clicking Continue."
+            ],
+            "message": "Got it.  Choose a Time for the event by clicking on the times below and then clicking Continue.",
+            "translation": ""
+        },
+        {
+            "id": "Time selected: {Format1504}",
+            "message": "Time selected: {Format1504}",
+            "translation": "",
+            "placeholders": [
+                {
+                    "id": "Format1504",
+                    "string": "%[1]v",
+                    "type": "string",
+                    "underlyingType": "string",
+                    "argNum": 1,
+                    "expr": "selTime.Format(\"15:04\")"
+                }
+            ]
+        },
+        {
+            "id": "Could not parse the time you provided. Please send it in the format 22:03.",
+            "message": "Could not parse the time you provided. Please send it in the format 22:03.",
+            "translation": ""
+        },
+        {
+            "id": [
+                "CHOOSE_LOCATION",
+                "Where does the event take place?  Specify the name or address as you might type into Google Maps."
+            ],
+            "message": "Where does the event take place?  Specify the name or address as you might type into Google Maps.",
+            "translation": ""
+        },
+        {
+            "id": "error creating event: {Err}",
+            "message": "error creating event: {Err}",
+            "translation": "",
+            "placeholders": [
+                {
+                    "id": "Err",
+                    "string": "%[1]v",
+                    "type": "error",
+                    "underlyingType": "interface{Error() string}",
+                    "argNum": 1,
+                    "expr": "err"
+                }
+            ]
+        },
+        {
+            "id": "Alright, I've created your event! You can now add additional content, or share it to another chat.",
+            "message": "Alright, I've created your event! You can now add additional content, or share it to another chat.",
+            "translation": ""
+        },
+        {
+            "id": "Specify the name of the event.",
+            "message": "Specify the name of the event.",
+            "translation": ""
+        },
+        {
+            "id": "Specify the name of the person hosting the event.",
+            "message": "Specify the name of the person hosting the event.",
+            "translation": ""
+        },
+        {
+            "id": "Specify any additional notes you'd like to show about the event.",
+            "message": "Specify any additional notes you'd like to show about the event.",
+            "translation": ""
+        },
+        {
+            "id": "Specify the maximum number of people that can attend.  Once the maximum is reached, users will no longer be able to click 'I'm Going'.\n\nTo disable, send a 0.",
+            "message": "Specify the maximum number of people that can attend.  Once the maximum is reached, users will no longer be able to click 'I'm Going'.\n\nTo disable, send a 0.",
+            "translation": ""
+        },
+        {
+            "id": "Choose the display language for this event.",
+            "message": "Choose the display language for this event.",
+            "translation": ""
+        },
+        {
+            "id": "error updating event: {Err}",
+            "message": "error updating event: {Err}",
+            "translation": "",
+            "placeholders": [
+                {
+                    "id": "Err",
+                    "string": "%[1]v",
+                    "type": "error",
+                    "underlyingType": "interface{Error() string}",
+                    "argNum": 1,
+                    "expr": "err"
+                }
+            ]
+        },
+        {
+            "id": [
+                "GENERAL_ERROR",
+                "A general error occurred."
+            ],
+            "message": "A general error occurred.",
+            "translation": ""
+        },
+        {
+            "id": "The value you provided is not one of the choices.",
+            "message": "The value you provided is not one of the choices.",
+            "translation": ""
+        },
+        {
+            "id": "Please provide a valid number",
+            "message": "Please provide a valid number",
+            "translation": ""
+        },
+        {
+            "id": "Event not found",
+            "message": "Event not found",
+            "translation": ""
+        },
+        {
+            "id": "Name:",
+            "message": "Name:",
+            "translation": ""
+        },
+        {
+            "id": "Date:",
+            "message": "Date:",
+            "translation": ""
+        },
+        {
+            "id": "Location:",
+            "message": "Location:",
+            "translation": ""
+        },
+        {
+            "id": "Hosted By:",
+            "message": "Hosted By:",
+            "translation": ""
+        },
+        {
+            "id": "Suitwalk:",
+            "message": "Suitwalk:",
+            "translation": ""
+        },
+        {
+            "id": "Max Attendees:",
+            "message": "Max Attendees:",
+            "translation": ""
+        },
+        {
+            "id": "Notes:",
+            "message": "Notes:",
+            "translation": ""
+        },
+        {
+            "id": "Error listing events: {Err}",
+            "message": "Error listing events: {Err}",
+            "translation": "",
+            "placeholders": [
+                {
+                    "id": "Err",
+                    "string": "%[1]v",
+                    "type": "error",
+                    "underlyingType": "interface{Error() string}",
+                    "argNum": 1,
+                    "expr": "err"
+                }
+            ]
+        },
+        {
+            "id": "Select an event to edit:\n{T}",
+            "message": "Select an event to edit:\n{T}",
+            "translation": "",
+            "placeholders": [
+                {
+                    "id": "T",
+                    "string": "%[1]v",
+                    "type": "string",
+                    "underlyingType": "string",
+                    "argNum": 1,
+                    "expr": "t"
+                }
+            ]
+        },
+        {
+            "id": "Unable to parse event ID",
+            "message": "Unable to parse event ID",
+            "translation": "",
+            "placeholders": [
+                {
+                    "id": "Err",
+                    "string": "%[1]v",
+                    "type": "error",
+                    "underlyingType": "interface{Error() string}",
+                    "argNum": 1,
+                    "expr": "err"
+                }
+            ]
+        },
+        {
+            "id": "The language has been set to English.",
+            "message": "The language has been set to English.",
+            "translation": ""
+        },
+        {
+            "id": "Hi! I'm the Furry Plans Bot.  Let's create some new plans.  First, send me the name of the event.",
+            "message": "Hi! I'm the Furry Plans Bot.  Let's create some new plans.  First, send me the name of the event.",
             "translation": ""
         },
         {
             "id": "Here is a list of available commands:\n/start\n/language",
             "message": "Here is a list of available commands:\n/start\n/language",
-            "translation": ""
-        },
-        {
-            "id": "The language has been set to English.",
-            "message": "The language has been set to English.",
             "translation": ""
         },
         {
